--- a/labs/lab1/contact.html
+++ b/labs/lab1/contact.html
@@ -28,33 +28,19 @@ in html
         </header>
         <hr width="50%">
         <nav>
-            <a href="index.html" id="current">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="contact.html">Contact Us</a>
-            
+            <a href="contact.html" id="current">Contact Us</a>
         </nav>
         <br /><br />
-        <main>
-            <figure id="me">
-                <img id="profilePic" src="img/corey.png" alt="Portrait of Corey Johnson" >
-            </figure> 
-            
-            <div id="welcomeText">
-                Hello! <br />
-                <p>Thank you for visiting my professional portfolio website.</p>
-                <p>I am a Software Engineer and have been recently hired at the Acme Corporation.</p>
-                <p>Feel free to contact me!</p>
-                <br /><br />
-                <em>"With ordinary talent and extraordinary <strong>preseverance</strong>, all things are attainable"</em>
-                <br />
-                - Thomas F. Buxton
-            </div>
-        </main>
+        <div id="content">
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfGxJ_IVzx4Hpj8KlCvJJ_UAr0ZJFLs5j7rs-1Fi1njsvVB6g/viewform?embedded=true" width="640" height="752" frameborder="0">Loading...</iframe>
+        </div>
         <!-- This is the footer -->
         <!-- The footer goes inside the body but not always -->
         <footer>
             <hr>
-            CST 336. 2018 &copy; Johnson <br />
+            CST 336 Internet Programming. 2018 &copy; Johnson <br />
             <strong>Disclamer:</strong> The information in this webpage is fictitous. <br />
             It is used for academic purposes only.
             <br /><br />
