--- a/labs/lab1/about.html
+++ b/labs/lab1/about.html
@@ -56,7 +56,7 @@ in html
             <ul>
                 <li><span class="hobby">Video games</span>: I own four consoles and like all kind of games but my favorite is The Legend of Zelda</li>
                 <li><span class="hobby">Soccer</span>: I am part of a team and we play every Saturday. I'm the goalie</li>
-                <li><span class="hobby">Music</span>: I love all kind of music but my favorite is R&B and Pop.</li>
+                <li><span class="hobby">Music</span>: I love all kind of music but my favorite is R&B and Pop</li>
                 <li><span class="hobby">Programming</span>: I spend at least two hours every day using and learning programming languages </li>
             </ul>
             
