--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -13,7 +13,7 @@ in html
 <!-- All styles and javascript go inside the head -->
     <head>
         <title>Lab 1: Personal Portfolio</title>
-        <meta charset-"utf-8"/>
+        <meta charset="utf-8"/>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     </head>
