--- a/labs/lab1/about.html
+++ b/labs/lab1/about.html
@@ -26,7 +26,7 @@ in html
         <header>
             <h1>Corey Johnson</h1>
         </header>
-        <hr width="50%">
+        <hr id="topHr">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html" id="current">About</a>
