--- a/labs/lab1/contact.html
+++ b/labs/lab1/contact.html
@@ -34,7 +34,7 @@ in html
         </nav>
         <br /><br />
         <div id="content">
-           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfGxJ_IVzx4Hpj8KlCvJJ_UAr0ZJFLs5j7rs-1Fi1njsvVB6g/viewform?embedded=true" width="640" height="752" frameborder="0">Loading...</iframe>
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfGxJ_IVzx4Hpj8KlCvJJ_UAr0ZJFLs5j7rs-1Fi1njsvVB6g/viewform?embedded=true" width="640" height="752"></iframe>
         </div>
         <!-- This is the footer -->
         <!-- The footer goes inside the body but not always -->
