Contact link fix

--- a/labs/lab1/about.html
+++ b/labs/lab1/about.html
@@ -30,7 +30,7 @@ in html
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html" id="current">About</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <br /><br />
         <div id="content">
