--- a/labs/lab1/contact.html
+++ b/labs/lab1/contact.html
@@ -30,7 +30,7 @@ in html
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="contact.html" id="current">Contact Us</a>
+            <a href="contact.html" id="current">Contact</a>
         </nav>
         <br /><br />
         <div id="content">
