--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -30,7 +30,7 @@ in html
         <nav>
             <a href="index.html" id="current">Home</a>
             <a href="about.html">About</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="contact.html">Contact</a>
             
         </nav>
         <br /><br />
