Monday Night Update

--- a/hw/hw1/hololens.html
+++ b/hw/hw1/hololens.html
@@ -14,10 +14,10 @@
         <div id="title">Augmented Reality</div>
         <div id="links">
             <h2>Links</h2>
-            <a href="index.html" id="current">Overview</a><br />
+            <a href="index.html">Overview</a><br />
             <a href="glass.html">Glass</a><br />
             <a href="magicleap.html">Magic Leap</a><br />
-            <a href="hololens.html">HoloLens</a><br />
+            <a href="hololens.html" id="current">HoloLens</a><br />
         </div>
         <div id="overview">
             <h3>Overview</h3>
