--- a/hw/hw1/glass.html
+++ b/hw/hw1/glass.html
@@ -14,24 +14,29 @@
         <div id="title">Augmented Reality</div>
         <div id="links">
             <h2>Links</h2>
-            <a href="index.html" id="current">Overview</a><br />
-            <a href="glass.html">Glass</a><br />
+            <a href="index.html">Overview</a><br />
+            <a href="glass.html" id="current">Glass</a><br />
             <a href="magicleap.html">Magic Leap</a><br />
             <a href="hololens.html">HoloLens</a><br />
         </div>
         <div id="overview">
-            <h3>Overview</h3>
+            <h3>Google Glass</h3>
             <p>
-                Augmented reality gives us the ability to overlay virtual data on top of the real world.
-Previously, augmented reality was limited to military technologies like heads up displays and
-television broadcasts such as sports overlays; Now with advances in smartphone technologies,
-augmented reality is working its way into our every day lives. While mobile augmented reality is
-in the spotlight from Pokémon Go and Snapchat filters, industrial applications are changing the
-way we work and interface with technology.
+                While Google Glass may not have survived as a consumer product, the industrial
+                use of Augmented Reality is taking off. Boeing has partnered with Upskill using
+                Glass to solve the problem of wiring new aircraft. Glass allows technicians 
+                to view wiring diagrams or watch videos of correct instalations. It can also allow
+                users to live-stream their view to more expierenced workers when they run into trouble.
+                This has decreased the time it takes to wire an aircraft by 25% and reducded errors
+                below 1%.
             </p>
+            <a href="https://www.cio.com/article/3095132/wearable-technology/google-glass-takes-flight-at-boeing.html"
+             id="source">
+                Boeing, Upskill, Google Glass
+            </a>
         </div>
         <div id="image">
-            <img src="img/ar1.jpg" alt="Pokemon Go Screenshot">
+            <img src="img/glass.jpg" alt="Google Glass being used to wire an aircraft">
         </div>
         <div id="footer">
             CST 336 Internet Programming: 2018 &copy; Johnson <br />
