--- a/hw/hw1/magicleap.html
+++ b/hw/hw1/magicleap.html
@@ -14,9 +14,9 @@
         <div id="title">Augmented Reality</div>
         <div id="links">
             <h2>Links</h2>
-            <a href="index.html" id="current">Overview</a><br />
+            <a href="index.html">Overview</a><br />
             <a href="glass.html">Glass</a><br />
-            <a href="magicleap.html">Magic Leap</a><br />
+            <a href="magicleap.html" id="current">Magic Leap</a><br />
             <a href="hololens.html">HoloLens</a><br />
         </div>
         <div id="overview">
