Homework 1 Content Complete

--- a/hw/hw1/glass.html
+++ b/hw/hw1/glass.html
@@ -16,8 +16,8 @@
             <h2>Links</h2>
             <a href="index.html">Overview</a><br />
             <a href="glass.html" id="current">Glass</a><br />
-            <a href="magicleap.html">Magic Leap</a><br />
             <a href="hololens.html">HoloLens</a><br />
+            <a href="magicleap.html">Magic Leap</a><br />
         </div>
         <div id="overview">
             <h3>Google Glass</h3>
@@ -28,21 +28,23 @@
                 to view wiring diagrams or watch videos of correct instalations. It can also allow
                 users to live-stream their view to more expierenced workers when they run into trouble.
                 This has decreased the time it takes to wire an aircraft by 25% and reducded errors
-                below 1%.
+                below 1%. This is one small sample showing the potential Augmented Reality has
+                to change how we work.
             </p>
             <a href="https://www.cio.com/article/3095132/wearable-technology/google-glass-takes-flight-at-boeing.html"
              id="source">
                 Boeing, Upskill, Google Glass
             </a>
+             <div id="image">
+                <img src="img/glass.jpg" alt="Google Glass being used to wire an aircraft">
+            </div>
         </div>
-        <div id="image">
-            <img src="img/glass.jpg" alt="Google Glass being used to wire an aircraft">
-        </div>
+       
         <div id="footer">
             CST 336 Internet Programming: 2018 &copy; Johnson <br />
             <strong>Disclamer:</strong> The information in this webpage is fictitous. <br />
             It is used for academic purposes only.
-            <br /><br />
+            <br />
             <img src="img/csumb.png" alt="CSUMB logo">
         </div>
         
