--- a/hw/hw1/hololens.html
+++ b/hw/hw1/hololens.html
@@ -16,28 +16,31 @@
             <h2>Links</h2>
             <a href="index.html">Overview</a><br />
             <a href="glass.html">Glass</a><br />
-            <a href="magicleap.html">Magic Leap</a><br />
             <a href="hololens.html" id="current">HoloLens</a><br />
+            <a href="magicleap.html">Magic Leap</a><br />
         </div>
         <div id="overview">
-            <h3>Overview</h3>
+            <h3>Microsoft Hololens</h3>
             <p>
-                Augmented reality gives us the ability to overlay virtual data on top of the real world.
-Previously, augmented reality was limited to military technologies like heads up displays and
-television broadcasts such as sports overlays; Now with advances in smartphone technologies,
-augmented reality is working its way into our every day lives. While mobile augmented reality is
-in the spotlight from Pokémon Go and Snapchat filters, industrial applications are changing the
-way we work and interface with technology.
+                Microsoft is the current leader in Augmented reality with HoloLense, which is the
+                first self-contained holographic computer. With no current plans to release a consumer
+                grade version, the current headset is geared towards developers and business applications.
+                Version 2 is scheduled to be released in 2019 which will be lighter, fit better and come
+                at a reducded price to spur adoption. 
             </p>
+            <a href="https://www.theverge.com/2018/6/13/17458168/microsoft-hololens-2-details-rumors" id="source">
+                Microsoft HoloLens
+            </a>
+            <div id="image">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QN95nNDtxjo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
         </div>
-        <div id="image">
-            <img src="img/ar1.jpg" alt="Pokemon Go Screenshot">
-        </div>
+        
         <div id="footer">
             CST 336 Internet Programming: 2018 &copy; Johnson <br />
             <strong>Disclamer:</strong> The information in this webpage is fictitous. <br />
             It is used for academic purposes only.
-            <br /><br />
+            <br />
             <img src="img/csumb.png" alt="CSUMB logo">
         </div>
         
