--- a/hw/hw1/magicleap.html
+++ b/hw/hw1/magicleap.html
@@ -16,28 +16,33 @@
             <h2>Links</h2>
             <a href="index.html">Overview</a><br />
             <a href="glass.html">Glass</a><br />
-            <a href="magicleap.html" id="current">Magic Leap</a><br />
             <a href="hololens.html">HoloLens</a><br />
+            <a href="magicleap.html" id="current">Magic Leap</a><br />
         </div>
         <div id="overview">
-            <h3>Overview</h3>
+            <h3>Magic Leap</h3>
             <p>
-                Augmented reality gives us the ability to overlay virtual data on top of the real world.
-Previously, augmented reality was limited to military technologies like heads up displays and
-television broadcasts such as sports overlays; Now with advances in smartphone technologies,
-augmented reality is working its way into our every day lives. While mobile augmented reality is
-in the spotlight from Pokémon Go and Snapchat filters, industrial applications are changing the
-way we work and interface with technology.
+                Magic Leap is currently the most hyped Augmented Reality headset. Its creator edition, Magic 
+                Leap One, was just released August 8th 2018. While the Magic Leap One may not have lived up
+                to the hype, only comming in as slightly more advanced then Microsofts HoloLens, it should give
+                creators the tools necessary to jump into creating the Augmented Reality experiences we're all
+                looking for. Magic one is currently building production facilities for a several different 
+                headsets.
             </p>
+            <a href="https://www.theverge.com/2018/8/8/17662040/magic-leap-one-creator-edition-preview-mixed-reality-glasses-launch"
+             id="source">
+                Magic Leap One
+            </a>
+            <div id="image">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/K5246156rcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
         </div>
-        <div id="image">
-            <img src="img/ar1.jpg" alt="Pokemon Go Screenshot">
-        </div>
+
         <div id="footer">
             CST 336 Internet Programming: 2018 &copy; Johnson <br />
             <strong>Disclamer:</strong> The information in this webpage is fictitous. <br />
             It is used for academic purposes only.
-            <br /><br />
+            <br />
             <img src="img/csumb.png" alt="CSUMB logo">
         </div>
         
