Homework 1 Validation fix 1

--- a/hw/hw1/magicleap.html
+++ b/hw/hw1/magicleap.html
@@ -34,7 +34,7 @@
                 Magic Leap One
             </a>
             <div id="image">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/K5246156rcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/K5246156rcQ" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </div>
 
