--- a/hw/hw1/hololens.html
+++ b/hw/hw1/hololens.html
@@ -32,7 +32,7 @@
                 Microsoft HoloLens
             </a>
             <div id="image">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QN95nNDtxjo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QN95nNDtxjo" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </div>
         
