--- a/hw/hw1/index.html
+++ b/hw/hw1/index.html
@@ -39,13 +39,9 @@
             <a href="https://drive.google.com/file/d/1VQUWsoB9TVf1gzLjBUQ4y3BCcaez8yD2/view" id="source">
             Augmented Reality <!-- My paper from CST 300 -->
             </a>
-
-
         </div>
-        
         <div id="image">
-            <img src="img/ar1.jpg" alt="Pokemon Go Screenshot"> <br />
-                
+            <img src="img/ar1.jpg" alt="Pokemon Go Screenshot">
         </div>
         <div id="footer">
             CST 336 Internet Programming: 2018 &copy; Johnson <br />
