--- a/hw/hw1/hololens.html
+++ b/hw/hw1/hololens.html
@@ -22,11 +22,11 @@
         <div id="overview">
             <h3>Microsoft Hololens</h3>
             <p>
-                Microsoft is the current leader in Augmented reality with HoloLense, which is the
-                first self-contained holographic computer. With no current plans to release a consumer
-                grade version, the current headset is geared towards developers and business applications.
-                Version 2 is scheduled to be released in 2019 which will be lighter, fit better and come
-                at a reducded price to spur adoption. 
+                Microsoft is the current leader in Augmented Reality with HoloLens, which is the 
+                first self-contained holographic computer. The current headset is geared towards developers and business 
+                applications with no current plans to release a consumer grade product. Version 2 
+                is scheduled to be released in 2019 which will be lighter, 
+                fit better and come at a reduced price to spur adoption.
             </p>
             <a href="https://www.theverge.com/2018/6/13/17458168/microsoft-hololens-2-details-rumors" id="source">
                 Microsoft HoloLens
