--- a/hw/hw1/index.html
+++ b/hw/hw1/index.html
@@ -26,15 +26,16 @@
             play, connect and learn.” — Tim Cook</blockquote>
             <p>
                 Augmented reality gives us the ability to overlay virtual data on top of the real world.
-                Previously, augmented reality was limited to military technologies like heads up displays and
-                television broadcasts such as sports overlays; Now with advances in smartphone technologies,
-                augmented reality is working its way into our every day lives. While mobile augmented reality is
-                in the spotlight from Pokémon Go and Snapchat filters, industrial applications are changing the
-                way we work and interface with technology.
+                Previously, augmented reality was limited to military technologies like heads up displays
+                and television broadcasts such as sports overlays; now with advances in smartphone 
+                technologies, augmented reality is working its way into our everyday lives. While mobile
+                augmented reality is in the spotlight from Pokémon Go and Snapchat filters, industrial 
+                applications are changing the way we work and interface with technology.
             </p>
             <p>
-                While the immediate future for consumer Augmented Reality will come from cellphones, the following
-                pages will take a look at some of the current and upcomming Augmented Reality headsets.
+                While the immediate future for consumer Augmented Reality will come from smartphones, 
+                the following pages will take a look at some of the current and upcoming Augmented Reality 
+                headsets.
             </p>
             <a href="https://drive.google.com/file/d/1VQUWsoB9TVf1gzLjBUQ4y3BCcaez8yD2/view" id="source">
             Augmented Reality <!-- My paper from CST 300 -->
