--- a/hw/hw1/magicleap.html
+++ b/hw/hw1/magicleap.html
@@ -22,11 +22,12 @@
         <div id="overview">
             <h3>Magic Leap</h3>
             <p>
-                Magic Leap is currently the most hyped Augmented Reality headset. Its creator edition, Magic 
-                Leap One, was just released August 8th 2018. While the Magic Leap One may not have lived up
-                to the hype, only comming in as slightly more advanced then Microsofts HoloLens, it should give
-                creators the tools necessary to jump into creating the Augmented Reality experiences we're all
-                looking for. Magic one is currently building production facilities for a several different 
+                Magic Leap is currently the most hyped Augmented Reality headset. Its creator 
+                edition, Magic Leap One, was just released August 8th 2018. While the Magic 
+                Leap One may not have lived up to the hype, only coming in as slightly more 
+                advanced then Microsoft’s HoloLens, it should give creators the tools necessary 
+                to jump into creating the Augmented Reality experiences we're all looking for. 
+                Magic one is currently building production facilities for a several different 
                 headsets.
             </p>
             <a href="https://www.theverge.com/2018/8/8/17662040/magic-leap-one-creator-edition-preview-mixed-reality-glasses-launch"
