--- a/hw/hw1/glass.html
+++ b/hw/hw1/glass.html
@@ -22,14 +22,14 @@
         <div id="overview">
             <h3>Google Glass</h3>
             <p>
-                While Google Glass may not have survived as a consumer product, the industrial
-                use of Augmented Reality is taking off. Boeing has partnered with Upskill using
-                Glass to solve the problem of wiring new aircraft. Glass allows technicians 
-                to view wiring diagrams or watch videos of correct instalations. It can also allow
-                users to live-stream their view to more expierenced workers when they run into trouble.
-                This has decreased the time it takes to wire an aircraft by 25% and reducded errors
-                below 1%. This is one small sample showing the potential Augmented Reality has
-                to change how we work.
+                While Google Glass may not have survived as a consumer product, the industrial 
+                use of Augmented Reality is taking off. Boeing has partnered with Upskill using 
+                Glass to solve the problem of wiring new aircraft. Glass allows technicians to 
+                view wiring diagrams or watch videos of correct installations. It can also allow 
+                users to live-stream their view to more experienced workers when they run into 
+                trouble. This has decreased the time it takes to wire an aircraft by 25% and 
+                reduced errors below 1%. This is one small sample showing the potential Augmented 
+                Reality has to change how we work.
             </p>
             <a href="https://www.cio.com/article/3095132/wearable-technology/google-glass-takes-flight-at-boeing.html"
              id="source">
