--- a/hw/hw1/magicleap.html
+++ b/hw/hw1/magicleap.html
@@ -27,7 +27,7 @@
                 Leap One may not have lived up to the hype, only coming in as slightly more 
                 advanced then Microsoft’s HoloLens, it should give creators the tools necessary 
                 to jump into creating the Augmented Reality experiences we're all looking for. 
-                Magic one is currently building production facilities for a several different 
+                Magic Leap is currently building production facilities for a several different 
                 headsets.
             </p>
             <a href="https://www.theverge.com/2018/8/8/17662040/magic-leap-one-creator-edition-preview-mixed-reality-glasses-launch"
