Space Invaders Jquery Update

--- a/hw/hw4/index.html
+++ b/hw/hw4/index.html
@@ -18,6 +18,7 @@
 		<button class="replayBtn btn btn-danger">Play Again</button>
 		
 		<div id="highScore"></div>
+		<div id="test"></div>
 		
 		<script src="js/spaceinvaders.js"></script>
 	</body>
